src/components/issues/IssuePage.scss
  .issue {
    &__content {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(3, minmax(100px, auto));
        grid-template-areas:
        "intro"
        "article"
        "contact"; //Add in suggested reading soon.
        margin: 78px 0 15px 0;
    }

    &__intro-content {
        text-align: center;
        grid-area: intro;
    }

    &__author-intro {
        &--title {
            padding: 10px 0px;
        }
    }
    
    &__cover {
        &-img {
            width: 75%;
            height: 75%;
            object-fit: fill;
        }
    }

    &__article {
        grid-area: article;

        &-section {
            margin-bottom: 40px;
        }

        &-content--question {
            padding-bottom: 5px;
        }
    }

    &__contact {
        grid-area: contact;

        &-list {
            list-style-type: none;
            margin-top: 10px;
            
            &-item {
                margin-top: 5px;
            }
        }
    }
  }

  @media (min-width: 768px) {

    .issue {
        &__cover {
            &-img {
                width: 50%;
                height: 50%;
            }
        }
    }
  }

  @media (min-width: 992px) {

    .issue {
        
        &__content {
            display: grid;
            grid-template-columns: 1fr 1fr;
            grid-template-rows: auto auto auto;
            column-gap: 50px;
            grid-template-areas: 
            "intro article"
            "intro article"
            ". contact"
        }

        &__intro-content {
            grid-area: intro;
            padding: 0 15px;
            margin-top: 50px;
        }

        &__article {
            grid-area: article;
            margin-top: 75px;
        }

        &__contact {
            grid-area: contact;
            margin: 30px 0;
            
            &-list {
                display: flex;
                flex-direction: row;
                justify-content: space-around;
            }
        }
    }


  }

  @media (min-width: 1200px) {

  }

